Fix issue with popup z-index

--- a/Tessera Website/styles.css
+++ b/Tessera Website/styles.css
@@ -102,6 +102,8 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    
+    z-index: 888;
 }
 
 #popup-header {
@@ -166,6 +168,8 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    
+    z-index: 888;
 }
 
 #settings-popup-header {
